--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "name": "ModStack",
+  "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
+    "ts-check": "svelte-check",
     "start": "snowpack dev",
     "build": "snowpack build",
     "test": "web-test-runner \"src/**/*.test.ts\""
@@ -8,18 +12,55 @@
     "svelte": "^3.24.0"
   },
   "devDependencies": {
+    "@snowpack/app-scripts-svelte": "^2.0.0",
+    "@snowpack/plugin-build-script": "^2.1.0",
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-svelte": "^3.5.0",
     "@snowpack/plugin-typescript": "^1.2.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/svelte": "^3.0.0",
+    "@tsconfig/svelte": "^1.0.10",
     "@types/chai": "^4.2.13",
     "@types/mocha": "^8.2.0",
-    "@types/snowpack-env": "^2.3.2",
+    "@types/snowpack-env": "^2.3.3",
     "@web/test-runner": "^0.12.0",
+    "autoprefixer": "^10.2.4",
     "chai": "^4.2.0",
+    "cssnano": "^4.1.10",
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "postcss-load-config": "^3.0.1",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.1.6",
     "snowpack": "^3.0.1",
+    "svelte-check": "^1.1.35",
     "svelte-preprocess": "^4.0.8",
+    "tailwindcss": "^2.0.3",
     "typescript": "^4.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,css,md,svelte}": "prettier --write"
+  },
+  "author": {
+    "name": "Antonio Bourassa",
+    "email": "ABourassa@Assetval.com"
+  },
+  "keywords": [
+    "csa-template",
+    "snowpack",
+    "svelte",
+    "typescript",
+    "tailwindcss"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
